# sdlproject

./: CMakeLists.txt  Readme.md  main.cpp
lib/SDL2_image/cmake/SDL2_image/: sdl2_image-config.cmake
lib/SDL2_image/pkgconfig/: SDL2_image.pc
src/: main.cpp  main.cpp.old
